--- a/app/src/main/res/layout/list_item_row_material.xml
+++ b/app/src/main/res/layout/list_item_row_material.xml
@@ -20,7 +20,7 @@
 
         <TextView
 
-            android:id="@+id/textViewRawMaterialName"
+            android:id="@+id/ownerCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Raw Material Name"
@@ -32,7 +32,7 @@
 
         <TextView
 
-            android:id="@+id/textViewCurrentStock"
+            android:id="@+id/ownerName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -41,7 +41,7 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRawMaterialName" />
+            app:layout_constraintTop_toBottomOf="@+id/ownerCode" />
 
         <TextView
 
@@ -54,7 +54,7 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentStock" />
+            app:layout_constraintTop_toBottomOf="@+id/ownerName" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
