--- a/app/src/main/res/layout/activity_suppler__home.xml
+++ b/app/src/main/res/layout/activity_suppler__home.xml
@@ -29,7 +29,7 @@
             android:layout_width="163dp"
             android:layout_height="27dp"
             android:layout_marginTop="4dp"
-            android:text="Owner Code : 123"
+            android:text="Suppler Code : 123"
             android:textColor="#212121"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
             android:layout_width="168dp"
             android:layout_height="30dp"
             android:layout_marginTop="4dp"
-            android:text="Owner pass: 555"
+            android:text="Suppler pass: 555"
             android:textColor="#212121"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
             android:layout_width="123dp"
             android:layout_height="27dp"
             android:layout_marginTop="12dp"
-            android:text="Owner name:"
+            android:text="Suppler name:"
             android:textColor="#727272"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
             android:layout_width="123dp"
             android:layout_height="27dp"
             android:layout_marginTop="12dp"
-            android:text="Owner place:"
+            android:text="Suppler place:"
             android:textColor="#727272"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Owner phone number"
+            android:text="Suppler phone number"
             android:textColor="#727272"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
