--- a/app/src/main/res/layout/activity_shop_owner_home.xml
+++ b/app/src/main/res/layout/activity_shop_owner_home.xml
@@ -20,6 +20,7 @@
         android:orientation="horizontal"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
