--- a/app/src/main/res/layout/activity_take_payment.xml
+++ b/app/src/main/res/layout/activity_take_payment.xml
@@ -172,7 +172,7 @@
         android:textColor="#212121"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="100dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/netBalance1" />
 
     <EditText
