Idea, Sign. Apache HTTP, For. & AGP 7.1.0-alpha02

--- a/app/src/main/res/layout/activity_add__expence.xml
+++ b/app/src/main/res/layout/activity_add__expence.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
     android:orientation="horizontal"
-    tools:context=".Add_Expence">
+    tools:context=".Add_Expense">
 
     <TextView
 
