--- a/app/src/main/res/layout/activity_add___in_cash.xml
+++ b/app/src/main/res/layout/activity_add___in_cash.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
     android:orientation="horizontal"
-    tools:context=".Add__InCash">
+    tools:context=".Add_InCash">
 
     <TextView
 
